{
    "version": 1,
    "name": "PlayerInputControl",
    "maps": [
        {
            "name": "GamePlay",
            "id": "f6872c7d-06b0-4513-806d-abbe34c86be3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a2b51375-f26e-40d7-a269-80ed68c1f1af",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "2dedfe81-4c21-4016-896e-b455a1b1ea0b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4a6dbe17-a72c-42de-ba5a-cb3f04f63972",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c5187f24-96ac-45df-9f85-08415d8a09b4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9c2c6854-c118-4915-b4b8-65481503205c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "745a295f-2dd6-4471-a49b-4aeebc30094a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a99882c8-d327-4442-8020-26dddba2d782",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "504ccb72-68ec-4b34-8ce4-a42dd7041bfc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "1fb01ccc-e080-4e96-81e0-ef4c9c01e596",
            "actions": [
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "733cce51-9230-4b22-9860-881a521cf04c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Left Click",
                    "type": "Button",
                    "id": "fd7fa3e4-ddb3-43a6-9aa1-72ea20c04b88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "5dc0f074-a4a4-4b99-b3ed-3e984c6c7e98",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06921f9b-22bd-414d-ae6b-1c699a17cbd6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e69e359-61f2-494c-9633-ccfc8ff6f08e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f351ef31-71d9-4921-88a7-7cb97b47f48d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}